@@ -1,3 +1,4 @@
+* Use UNION for 'Or'-ed domain with subqueries
 * Use global cache for Function fields in readonly transactions
 * Add option to strip leading and trailing whitespace from fields.Char
 
